tests/netgen/errors/false_gz_output/options.netgen
--grid --output=out/net.net.xml.gz
